[package]
authors = ["Brian Smith <brian@briansmith.org>"]
name = "crypto_bench_rust_crypto"
version = "0.1.0"

[lib]
name = "crypto_bench_rust_crypto"
path = "rust_crypto.rs"

[dependencies.crypto_bench]
path = "../crypto_bench"

[dependencies]
rust-crypto = "0.2"

# Ensure that the bench, release, and test settings are the same.

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
