[package]
authors = ["Brian Smith <brian@briansmith.org>"]
name = "crypto_bench_rust_crypto"
version = "0.1.0"

[lib]
name = "crypto_bench_rust_crypto"
path = "rust_crypto.rs"

[dependencies.crypto_bench]
path = "../crypto_bench"

[dependencies]
rust-crypto = { git = "https://github.com/DaGenix/rust-crypto" }
rand = "0.3.14"
