[package]
authors = ["Kurt Kartaltepe <kkartaltepe@gmail.com>"]
name = "crypto_bench_sha1"
version = "0.1.0"

[lib]
name = "crypto_bench_sha1"
path = "sha1.rs"

[dependencies.crypto_bench]
path = "../crypto_bench"

[dependencies]
sha1 = "*"

# Ensure that the bench, release, and test settings are the same.
[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
